Detailansicht Spieler mit allen Trainings in denen er da war

--- a/trainer.html
+++ b/trainer.html
@@ -36,7 +36,11 @@
 </div>
 <!--End of navbar-------------------------------------------------------------------------------------------------------->
 
-<div style="background: pink; height: 300px">Trainer dummy container</div>
+<div style="background: pink; height: 300px">Trainer dummy container<br>
+    Hier könnte man den Spielerkader als Modal aufmachen und dann für das nächste Spiel die Spieler auswählen, welche
+    aufgestellt werden...
+    -----
+</div>
 
 <script src="js/jquery-2.1.1.min.js"></script>
 <script src="foundation-js/foundation.min.js"></script>
