--- a/training.html
+++ b/training.html
@@ -125,6 +125,39 @@
     <a class="close-reveal-modal" id="close-player-addition-modal">&#215;</a>
 </div>
 
+
+<!------modal-tr-detail-player-------------------------------------------------------------------------------------------->
+<div id="modal-tr-detail-player" class="reveal-modal" data-reveal>
+    <h2>Spieler Trainings Details</h2>
+
+    <h3 id="playername"></h3>
+
+    <div class="row">
+        <div class="three columns push-nine">
+            <img id="image-player" class="img-player large-3 columns" src="img/avatar.jpg">
+
+        </div>
+    </div>
+    <div class="row">
+        <div class="nine columns pull-three">
+            <table id="player-tr-detail-table">
+                <thead>
+                <tr>
+                    <th>Trainings Daten:</th>
+
+                </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+
+    <a class="close-reveal-modal">&#215;</a>
+</div>
+
+
 <script src="foundation-js/foundation.min.js"></script>
 <script type="text/javascript" src="jquery-ui/jquery.ui.position.js"></script>
 <script>
