Training löschen halbfertig... es hängt rießiger rattenschwanz dran... soweit richtig gesehen, fehlt jedoch nur noch trCount Aktuallisierung

--- a/training.html
+++ b/training.html
@@ -100,10 +100,15 @@
 <div id="modal-add-player-to-tr" class="reveal-modal" data-reveal>
     <h2>Fügen Sie Spieler durch markieren zum Training hinzu!</h2>
 
+
     <div class="row">
         <div class="large-12 columns">
+
             <div id="header-date"></div>
             <div id="player-count"></div>
+            <div>
+                <button id="delete-tr">Training löschen</button>
+            </div>
         </div>
     </div>
     <!-- player-container -------------------------------------------------------------------------------------------------------->
@@ -135,7 +140,6 @@
     <div class="row">
         <div class="three columns push-nine">
             <img id="image-player" class="img-player large-3 columns" src="img/avatar.jpg">
-
         </div>
     </div>
     <div class="row">
