--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="fixed">
-    <nav class="top-bar" data-topbar role="navigation">
+    <nav class="top-bar show-for-large-up" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
                 <h1><a href="#">Top Team</a></h1>
@@ -31,55 +31,136 @@
             </ul>
         </section>
     </nav>
-</div>
 
-<!--End of navbar-------------------------------------------------------------------------------------------------------->
+    <div class="off-canvas-wrap show-for-medium-down" data-offcanvas>
+        <div class="inner-wrap">
+            <nav class="tab-bar">
+                <section class="left-small">
+                    <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
+                </section>
 
-<div class="row" id="button-create-new-team">
-    <a class="button large-9 small-10 small-offset-1 columns" href="#" data-reveal-id="modal-create-team">Neues Team
-        anlegen</a>
-</div>
+                <section class="middle tab-bar-section">
+                    <h1 class="title">TopTeam</h1>
+                </section>
+
+            </nav>
+
+            <aside class="left-off-canvas-menu">
+                <ul class="off-canvas-list">
+                    <li><a href="index.html" id="button-logout" class="button">Logout</a></li>
+                </ul>
+            </aside>
+
+            <section class="main-section">
+
+                <div class="row" id="button-create-new-team">
+                    <a class="button large-9 small-10 small-offset-1 columns" href="#"
+                       data-reveal-id="modal-create-team">Neues Team
+                        anlegen</a>
+                </div>
 
 
-<div id="login-form">
-    <div class="row">
-        <div class="large-12 small-12 medium-12 columns">
-            <form class="login-form">
-                <div class="error" style="display:none"></div>
-                <div class="row">
-                    <!--<div class="large-1 small-12 columns">-->
-                    <select id="select-role" class="large-12 small-12 medium-12 columns">
-                        <option value="1">Trainer</option>
-                        <option value="2">Verwalter</option>
-                        <option value="3">Spieler</option>
-                    </select>
-                    <!--</div>-->
+                <div id="login-form">
+                    <div class="row">
+                        <div class="large-12 small-12 medium-12 columns">
+                            <form class="login-form">
+                                <div class="error" style="display:none"></div>
+                                <div class="row">
+                                    <!--<div class="large-1 small-12 columns">-->
+                                    <select id="select-role" class="large-12 small-12 medium-12 columns">
+                                        <option value="1">Trainer</option>
+                                        <option value="2">Verwalter</option>
+                                        <option value="3">Spieler</option>
+                                    </select>
+                                    <!--</div>-->
+                                </div>
+                                <div class="row">
+                                    <!--<div class="large-1 small-12 columns">-->
+                                    <input class="large-12 small-3 medium-12 columns" id="input-teamname-login"
+                                           type="text"
+                                           placeholder="Teamname"/>
+                                    <!--</div>-->
+                                </div>
+                                <div class="row">
+                                    <!--<div class="large-1 small-12 columns">-->
+                                    <input class="large-12 small-12 medium-12 columns" id="input-password-login"
+                                           type="password"
+                                           placeholder="Passwort"/>
+                                    <!--</div>-->
+                                </div>
+                                <div class="row">
+                                    <a id="button-forgotten-pw" class="large-12 small-12 columns" href="#"
+                                       data-reveal-id="modal-reset-pw">Passwort vergessen?</a>
+                                </div>
+                                <div class="row">
+                                    <button id="button-login" class="large-9 small-10 medium-10 small-offset-1 columns">
+                                        Login
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
-                <div class="row">
-                    <!--<div class="large-1 small-12 columns">-->
-                    <input class="large-12 small-3 medium-12 columns" id="input-teamname-login" type="text"
-                           placeholder="Teamname"/>
-                    <!--</div>-->
-                </div>
-                <div class="row">
-                    <!--<div class="large-1 small-12 columns">-->
-                    <input class="large-12 small-12 medium-12 columns" id="input-password-login" type="password"
-                           placeholder="Passwort"/>
-                    <!--</div>-->
-                </div>
-                <div class="row">
-                    <a id="button-forgotten-pw" class="large-12 small-12 columns" href="#"
-                       data-reveal-id="modal-reset-pw">Passwort vergessen?</a>
-                </div>
-                <div class="row">
-                    <button id="button-login" class="large-9 small-10 medium-10 small-offset-1 columns">Login</button>
-                </div>
-            </form>
+
+                <!--End of login form--------------------------------------------------------------------------------------------------->
+
+
+            </section>
+
+            <a class="exit-off-canvas"></a>
+
         </div>
     </div>
 </div>
+<!--content for large---------------------------------------------------------------------------------------------------->
+<div class="show-for-large-up">
+    <div class="row" id="button-create-new-team">
+        <a class="button large-9 small-10 small-offset-1 columns" href="#" data-reveal-id="modal-create-team">Neues Team
+            anlegen</a>
+    </div>
 
-<!--End of login form--------------------------------------------------------------------------------------------------->
+
+    <div id="login-form">
+        <div class="row">
+            <div class="large-12 small-12 medium-12 columns">
+                <form class="login-form">
+                    <div class="error" style="display:none"></div>
+                    <div class="row">
+                        <!--<div class="large-1 small-12 columns">-->
+                        <select id="select-role" class="large-12 small-12 medium-12 columns">
+                            <option value="1">Trainer</option>
+                            <option value="2">Verwalter</option>
+                            <option value="3">Spieler</option>
+                        </select>
+                        <!--</div>-->
+                    </div>
+                    <div class="row">
+                        <!--<div class="large-1 small-12 columns">-->
+                        <input class="large-12 small-3 medium-12 columns" id="input-teamname-login" type="text"
+                               placeholder="Teamname"/>
+                        <!--</div>-->
+                    </div>
+                    <div class="row">
+                        <!--<div class="large-1 small-12 columns">-->
+                        <input class="large-12 small-12 medium-12 columns" id="input-password-login" type="password"
+                               placeholder="Passwort"/>
+                        <!--</div>-->
+                    </div>
+                    <div class="row">
+                        <a id="button-forgotten-pw" class="large-12 small-12 columns" href="#"
+                           data-reveal-id="modal-reset-pw">Passwort vergessen?</a>
+                    </div>
+                    <div class="row">
+                        <button id="button-login" class="large-9 small-10 medium-10 small-offset-1 columns">Login
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!--End of login form--------------------------------------------------------------------------------------------------->
+</div>
 
 
 <!--team erstellen modal------------------------------------------------------------------------------------------------>
