--- a/training.html
+++ b/training.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div class="fixed">
-    <nav class="top-bar" data-topbar role="navigation">
+    <nav class="top-bar show-for-large-up" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
                 <h1><a href="index.html">Top Team</a></h1>
@@ -38,7 +38,7 @@
         </section>
     </nav>
 </div>
-    <div class="off-canvas-wrap" data-offcanvas>
+    <div class="off-canvas-wrap show-for-medium-down" data-offcanvas>
         <div class="inner-wrap">
             <nav class="tab-bar">
                 <section class="left-small">
