--- a/index.html
+++ b/index.html
@@ -7,55 +7,35 @@
     <script src="//www.parsecdn.com/js/parse-1.3.0.min.js"></script>
     <link rel="stylesheet" href="css/foundation.min.css"/>
     <link rel="stylesheet" href="css/normalize.css"/>
+    <link rel="stylesheet" href="css/topbar.css"/>
     <script src="foundation-js/modernizr.js"></script>
 </head>
 <body>
-<div class="fixed">
-    <nav class="top-bar show-for-large-up" data-topbar role="navigation">
-        <ul class="title-area">
-            <li class="name">
-                <h1><a href="#">Top Team</a></h1>
-            </li>
-            <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-            <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-        </ul>
 
-        <section class="top-bar-section">
-            <!-- Right Nav Section -->
-            <ul class="right">
-                <li><a href="index.html" id="button-logout" class="button">Logout</a></li>
-            </ul>
-            <!--Left Nav Section-->
-            <ul class="left">
-                <!--<li class=""><a href="#">Training</a></li>-->
-            </ul>
-        </section>
-    </nav>
-</div>
-    <div class="off-canvas-wrap show-for-medium-down" data-offcanvas>
-        <div class="inner-wrap">
+<div class="off-canvas-wrap" data-offcanvas>
+    <div class="inner-wrap">
+        <div class="hybrid-bar">
             <nav class="tab-bar">
-                <section class="left-small">
-                    <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
+                <div class="title-area">
+                    <div class="name">
+                        <h1><a href="#">Top Team</a></h1>
+                    </div>
+                </div>
+                <section class="right-small show-for-small">
+                    <a class="right-off-canvas-toggle menu-icon" href="#"><span></span></a>
                 </section>
-
-                <section class="middle tab-bar-section">
-                    <h1 class="title">TopTeam</h1>
-                </section>
-
             </nav>
-
-            <aside class="left-off-canvas-menu">
+            <aside class="right-off-canvas-menu">
                 <ul class="off-canvas-list">
-                    <li><a href="index.html" id="button-logout" class="button">Logout</a></li>
+                    <li class="show-for-small"><label>Foundation</label></li>
+                    <li><a href="index.html" id="button-logout">Logout</a></li>
                 </ul>
             </aside>
-
-            <section class="main-section">
-
+        </div>
+        <div class="row">
+            <div class="large-12 columns">
                 <div class="row" id="button-create-new-team">
-                    <a class="button large-9 small-10 small-offset-1 columns" href="#"
-                       data-reveal-id="modal-create-team">Neues Team
+                    <a class="button large-9 small-10 small-offset-1 columns" href="#" data-reveal-id="modal-create-team">Neues Team
                         anlegen</a>
                 </div>
 
@@ -76,15 +56,13 @@
                                 </div>
                                 <div class="row">
                                     <!--<div class="large-1 small-12 columns">-->
-                                    <input class="large-12 small-3 medium-12 columns" id="input-teamname-login"
-                                           type="text"
+                                    <input class="large-12 small-3 medium-12 columns" id="input-teamname-login" type="text"
                                            placeholder="Teamname"/>
                                     <!--</div>-->
                                 </div>
                                 <div class="row">
                                     <!--<div class="large-1 small-12 columns">-->
-                                    <input class="large-12 small-12 medium-12 columns" id="input-password-login"
-                                           type="password"
+                                    <input class="large-12 small-12 medium-12 columns" id="input-password-login" type="password"
                                            placeholder="Passwort"/>
                                     <!--</div>-->
                                 </div>
@@ -93,74 +71,22 @@
                                        data-reveal-id="modal-reset-pw">Passwort vergessen?</a>
                                 </div>
                                 <div class="row">
-                                    <button id="button-login" class="large-9 small-10 medium-10 small-offset-1 columns">
-                                        Login
+                                    <button id="button-login" class="large-9 small-10 medium-10 small-offset-1 columns">Login
                                     </button>
                                 </div>
                             </form>
                         </div>
                     </div>
                 </div>
-
-                <!--End of login form--------------------------------------------------------------------------------------------------->
-
-
-            </section>
-
-            <a class="exit-off-canvas"></a>
-
-        </div>
-    </div>
-
-<!--content for large---------------------------------------------------------------------------------------------------->
-<div class="show-for-large-up">
-    <div class="row" id="button-create-new-team">
-        <a class="button large-9 small-10 small-offset-1 columns" href="#" data-reveal-id="modal-create-team">Neues Team
-            anlegen</a>
-    </div>
-
-
-    <div id="login-form">
-        <div class="row">
-            <div class="large-12 small-12 medium-12 columns">
-                <form class="login-form">
-                    <div class="error" style="display:none"></div>
-                    <div class="row">
-                        <!--<div class="large-1 small-12 columns">-->
-                        <select id="select-role" class="large-12 small-12 medium-12 columns">
-                            <option value="1">Trainer</option>
-                            <option value="2">Verwalter</option>
-                            <option value="3">Spieler</option>
-                        </select>
-                        <!--</div>-->
-                    </div>
-                    <div class="row">
-                        <!--<div class="large-1 small-12 columns">-->
-                        <input class="large-12 small-3 medium-12 columns" id="input-teamname-login" type="text"
-                               placeholder="Teamname"/>
-                        <!--</div>-->
-                    </div>
-                    <div class="row">
-                        <!--<div class="large-1 small-12 columns">-->
-                        <input class="large-12 small-12 medium-12 columns" id="input-password-login" type="password"
-                               placeholder="Passwort"/>
-                        <!--</div>-->
-                    </div>
-                    <div class="row">
-                        <a id="button-forgotten-pw" class="large-12 small-12 columns" href="#"
-                           data-reveal-id="modal-reset-pw">Passwort vergessen?</a>
-                    </div>
-                    <div class="row">
-                        <button id="button-login" class="large-9 small-10 medium-10 small-offset-1 columns">Login
-                        </button>
-                    </div>
-                </form>
             </div>
         </div>
+        <a class="exit-off-canvas"></a>
     </div>
+</div>
+
+
 
     <!--End of login form--------------------------------------------------------------------------------------------------->
-</div>
 
 
 <!--team erstellen modal------------------------------------------------------------------------------------------------>
