--- a/player.html
+++ b/player.html
@@ -8,77 +8,49 @@
     <link rel="stylesheet" href="css/foundation.min.css"/>
     <link rel="stylesheet" href="css/normalize.css"/>
     <link rel="stylesheet" href="css/app.css"/>
+    <link rel="stylesheet" href="css/topbar.css"/>
     <script src="foundation-js/modernizr.js"></script>
 </head>
 <body>
-<div class="fixed">
-    <nav class="top-bar show-for-large-up" data-topbar role="navigation">
-        <ul class="title-area">
-            <li class="name">
-                <h1><a href="index.html">Top Team</a></h1>
-            </li>
-            <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-            <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-        </ul>
 
-        <section class="top-bar-section">
-            <!-- Right Nav Section -->
-            <ul class="right">
-                <li><a href="index.html" id="button-logout" class="button">Logout</a></li>
-            </ul>
-            <!--Left Nav Section-->
-            <ul class="left">
-                <li><a class="button" href="">Training</a></li>
-                <li><a class="button" href="">Beiner</a></li>
-            </ul>
-        </section>
-    </nav>
-</div>
-    <!--offcanvas-------------------------------------------------------------------------------------------------------->
-    <div class="off-canvas-wrap show-for-medium-down" data-offcanvas>
-        <div class="inner-wrap">
+<div class="off-canvas-wrap" data-offcanvas>
+    <div class="inner-wrap">
+        <div class="hybrid-bar">
             <nav class="tab-bar">
-                <section class="left-small">
-                    <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
+                <div class="title-area">
+                    <div class="name">
+                        <h1><a href="#">Top Team</a></h1>
+                    </div>
+                </div>
+                <section class="right-small show-for-small">
+                    <a class="right-off-canvas-toggle menu-icon" href="#"><span></span></a>
                 </section>
-
-                <section class="middle tab-bar-section">
-                    <h1 class="title">TopTeam</h1>
-                </section>
-
             </nav>
-
-            <aside class="left-off-canvas-menu">
+            <aside class="right-off-canvas-menu">
                 <ul class="off-canvas-list">
-                    <li><a href="index.html" id="button-logout" class="button">Logout</a></li>
-                    <li><label>Spieler</label></li>
+                    <li class="show-for-small"><label>Foundation</label></li>
                     <li><a href="">Training</a></li>
                     <li><a href="">Beiner</a></li>
+                    <li><a href="index.html" id="button-logout">Logout</a></li>
                 </ul>
             </aside>
-
-            <section class="main-section">
+        </div>
+        <div class="row">
+            <div class="large-12 columns">
                 <div style="background: pink; height: 300px">Player dummy container<br>
                     Spieler sollen nichts eingeben können! Sehen können wer wie oft im Training war und auch an welchem Tag welcher
                     SPieler im Training war in der Detailansicht.
                     AUßerdem wie viele Beiner wer hat und wie viele Beiner wer noch bezahlen muss.
 
                 </div>
-            </section>
-
-            <a class="exit-off-canvas"></a>
-
+            </div>
         </div>
+        <a class="exit-off-canvas"></a>
     </div>
-
-<!--End of navbar-------------------------------------------------------------------------------------------------------->
-
-<div class="show-for-large-up" style="background: pink; height: 300px">Player dummy container<br>
-    Spieler sollen nichts eingeben können! Sehen können wer wie oft im Training war und auch an welchem Tag welcher
-    SPieler im Training war in der Detailansicht.
-    AUßerdem wie viele Beiner wer hat und wie viele Beiner wer noch bezahlen muss.
-
 </div>
+
+
+
 
 <script src="js/jquery-2.1.1.min.js"></script>
 <script src="foundation-js/foundation.min.js"></script>
