--- a/trainer.html
+++ b/trainer.html
@@ -35,50 +35,39 @@
     </nav>
 </div>
 
-    <!--offcanvas------------------------------------------------------------------------------------------------------->
-
-    <div class="off-canvas-wrap show-for-medium-down" data-offcanvas>
-        <div class="inner-wrap">
+<div class="off-canvas-wrap" data-offcanvas>
+    <div class="inner-wrap">
+        <div class="hybrid-bar">
             <nav class="tab-bar">
-                <section class="left-small">
-                    <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
+                <div class="title-area">
+                    <div class="name">
+                        <h1><a href="#">Top Team</a></h1>
+                    </div>
+                </div>
+                <section class="right-small show-for-small">
+                    <a class="right-off-canvas-toggle menu-icon" href="#"><span></span></a>
                 </section>
-
-                <section class="middle tab-bar-section">
-                    <h1 class="title">TopTeam</h1>
-                </section>
-
             </nav>
-
-            <aside class="left-off-canvas-menu">
+            <aside class="right-off-canvas-menu">
                 <ul class="off-canvas-list">
-                    <li><label>Trainerbereich</label></li>
+                    <li class="show-for-small"><label>Foundation</label></li>
                     <li><a href="training.html">Training</a></li>
                     <li><a href="team.html">Spielerkader</a></li>
+                    <li><a href="index.html" id="button-logout">Logout</a></li>
                 </ul>
             </aside>
-
-            <section class="main-section">
+        </div>
+        <div class="row">
+            <div class="large-12 columns">
                 <div style="background: pink; height: 300px">Trainer dummy container<br>
-                    Hier könnte man den Spielerkader als Modal aufmachen und dann für das nächste Spiel die Spieler
-                    auswählen, welche
+                    Hier könnte man den Spielerkader als Modal aufmachen und dann für das nächste Spiel die Spieler auswählen,
+                    welche
                     aufgestellt werden...
                     -----
                 </div>
-            </section>
-
-            <a class="exit-off-canvas"></a>
-
+            </div>
         </div>
-    </div>
-
-<!--End of navbar-------------------------------------------------------------------------------------------------------->
-<div class="show-for-large-up">
-    <div style="background: pink; height: 300px">Trainer dummy container<br>
-        Hier könnte man den Spielerkader als Modal aufmachen und dann für das nächste Spiel die Spieler auswählen,
-        welche
-        aufgestellt werden...
-        -----
+        <a class="exit-off-canvas"></a>
     </div>
 </div>
 
