Training löschen funktioniert komplett

--- a/manager.html
+++ b/manager.html
@@ -28,8 +28,8 @@
             </ul>
             <!--Left Nav Section-->
             <ul class="left">
-                <li><a class="button" href="training.html">Training</a></li>
-                <li><a class="button" href="team.html">Spielerkader</a></li>
+                <li><a class="button" href="">Beiner</a></li>
+                <li><a class="button" href="">Strafenkatalog</a></li>
                 <li><a class="button" href="">Infos einstellen</a></li>
             </ul>
         </section>
@@ -37,11 +37,10 @@
 </div>
 <!--End of navbar-------------------------------------------------------------------------------------------------------->
 
-<div class
-?>Trainer dummy container<br>
-Hier könnte man den Spielerkader als Modal aufmachen und dann für das nächste Spiel die Spieler auswählen, welche
-    aufgestellt werden...
-    -----
+<div style="background: pink; height: 300px">Verwalter dummy container<br>
+    Verwalter können Beiner eingeben, abrechnen, Mannschaftskasse verwalten, Strafenkatalog anlegen und verwalten...,
+    und infos auf spielerstartseite einstellen
+
 </div>
 
 <script src="js/jquery-2.1.1.min.js"></script>
@@ -49,6 +48,6 @@ Hier könnte man den Spielerkader als Modal aufmachen und dann für das nächste
 <script>
     $(document).foundation();
 </script>
-<script src="js/Team.js"></script>
+<script src="js/Manager.js"></script>
 </body>
 </html>
