--- a/player.html
+++ b/player.html
@@ -7,8 +7,8 @@
     <script src="//www.parsecdn.com/js/parse-1.3.0.min.js"></script>
     <link rel="stylesheet" href="css/foundation.min.css"/>
     <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/app.css"/>
     <link rel="stylesheet" href="css/topbar.css"/>
+    <link rel="stylesheet" href="css/app.css"/>
     <script src="foundation-js/modernizr.js"></script>
 </head>
 <body>
@@ -36,7 +36,7 @@
             </aside>
         </div>
         <div class="row">
-            <div class="large-12 columns">
+            <div class="large-12 columns content-wrapper">
                 <div style="background: pink; height: 300px">Player dummy container<br>
                     Spieler sollen nichts eingeben können! Sehen können wer wie oft im Training war und auch an welchem Tag welcher
                     SPieler im Training war in der Detailansicht.
