--- a/manager.html
+++ b/manager.html
@@ -7,6 +7,7 @@
     <script src="//www.parsecdn.com/js/parse-1.3.0.min.js"></script>
     <link rel="stylesheet" href="css/foundation.min.css"/>
     <link rel="stylesheet" href="css/normalize.css"/>
+    <link rel="stylesheet" href="css/topbar.css"/>
     <link rel="stylesheet" href="css/app.css"/>
     <script src="foundation-js/modernizr.js"></script>
 </head>
