--- a/trainer.html
+++ b/trainer.html
@@ -7,8 +7,8 @@
     <script src="//www.parsecdn.com/js/parse-1.3.0.min.js"></script>
     <link rel="stylesheet" href="css/foundation.min.css"/>
     <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/app.css"/>
     <link rel="stylesheet" href="css/topbar.css"/>
+    <link rel="stylesheet" href="css/app.css"/>
     <script src="foundation-js/modernizr.js"></script>
 </head>
 <body>
@@ -35,7 +35,7 @@
             </aside>
         </div>
         <div class="row">
-            <div class="large-12 columns">
+            <div class="large-12 columns content-wrapper">
                 <div style="background: pink; height: 300px">Trainer dummy container<br>
                     Hier könnte man den Spielerkader als Modal aufmachen und dann für das nächste Spiel die Spieler auswählen,
                     welche
