--- a/training.html
+++ b/training.html
@@ -7,9 +7,13 @@
     <script src="//www.parsecdn.com/js/parse-1.3.0.min.js"></script>
     <link rel="stylesheet" href="css/foundation.min.css"/>
     <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/app.css"/>
     <link rel="stylesheet" href="jquery-ui/jquery.contextMenu.css"/>
     <link rel="stylesheet" href="css/topbar.css"/>
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="css/fonts/foundation_icons_general/stylesheets/general_foundicons_ie7.css">
+    <![endif]-->
+    <link rel="stylesheet" href="css/fonts/foundation_icons_general/stylesheets/general_foundicons.css">
+    <link rel="stylesheet" href="css/app.css"/>
     <script src="foundation-js/modernizr.js"></script>
     <script src="js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -42,7 +46,7 @@
             </aside>
         </div>
         <div class="row">
-            <div class="large-12 columns">
+            <div class="large-12 columns content-wrapper">
                 <div class="row">
                     <a class="button large-12 columns medium-12 small-12" href="#" data-reveal-id="modal-add-training">Training
                         hinzufügen</a>
@@ -112,13 +116,11 @@
 
 
     <div class="row">
-        <div class="large-12 columns">
+        <div class="large-12 columns" id="modal-add-player-to-tr-controll-panel">
 
             <div id="header-date"></div>
             <div id="player-count"></div>
-            <div>
-                <button id="delete-tr">Training löschen</button>
-            </div>
+            <a id="delete-tr" class="round tiny button"><i class="foundicon-trash"></i> Training löschen</a>
         </div>
     </div>
     <!-- player-container -------------------------------------------------------------------------------------------------------->
@@ -148,13 +150,8 @@
     <h3 id="playername"></h3>
 
     <div class="row">
-        <div class="three columns push-nine">
-            <img id="image-player" class="img-player large-3 columns" src="img/avatar.jpg">
-        </div>
-    </div>
-    <div class="row">
-        <div class="nine columns pull-three">
-            <table id="player-tr-detail-table">
+            <img class="img-player large-3 columns" src="img/avatar.jpg">
+            <table id="player-tr-detail-table" class="large-9 large-offset-3 columns">
                 <thead>
                 <tr>
                     <th>Trainings Daten:</th>
@@ -165,10 +162,10 @@
                 </tbody>
             </table>
         </div>
-    </div>
+</div>
 
 
-    <a class="close-reveal-modal">&#215;</a>
+<a class="close-reveal-modal">&#215;</a>
 </div>
 
 
