player.html erstellt, mit info-box/panel versehen und ordnerstruktur erstellt... ist ja scho moi ned schlecht

--- a/player/player.html
+++ b/player/player.html
@@ -42,10 +42,10 @@
             </aside>
         </div>
         <div class="row">
-            <div class="large-12 columns">
+            <div class="large-12 columns content-wrapper">
 
-                <div id="player-infobox" class="row panel">
-                    Diese Woche findet das Training am Dienstag und Donnerstag statt. Beginn 18.45 Uhr! Am Mittwoch
+                <div id="player-infobox" class="panel">
+                Diese Woche findet das Training am Dienstag und Donnerstag statt. Beginn 18.45 Uhr! Am Mittwoch
                     freiwillige Laufeinheit ab 19 Uhr vom Sporti weg (Ansprechpartner: Lucas Schreff).
                 </div>
 
@@ -103,7 +103,7 @@
 
     <div class="row">
         <div class="three columns push-nine">
-            <img id="image-player" class="img-player large-3 columns" src="img/avatar.jpg">
+            <img id="image-player" class="img-player large-3 columns" src="../img/avatar.jpg">
         </div>
     </div>
     <div class="row">
